apps/api/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
spec:
    replicas: 2
    revisionHistoryLimit: 2
    selector:
        matchLabels:
            run: api
    template:
        metadata:
            labels:
                run: api
        spec:
            containers:
                - name: api
                  image: adomate/api:latest
                  ports:
                      - containerPort: 3000
                  imagePullPolicy: Always
                  resources:
                      requests:
                          cpu: 200m #200 millicpu AKA 0.2vCPU
                          memory: 50Mi
                      limits:
                          cpu: 1000m #1000 millicpu AKA 1vCPU
                          memory: 512Mi
