apps/api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api
    labels:
        app: api
spec:
    ports:
        - port: 3000
          targetPort: 3000
    selector:
        app: api
