apps/api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
    namespace: api
    annotations:
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        kubernetes.io/ingress.class: "nginx"
spec:
    tls:
        - hosts:
              - api.adomate.ai
          secretName: frontend-tls
    rules:
        - host: api.adomate.ai
          http:
              paths:
                  - pathType: Prefix
                    path: "/"
                    backend:
                        service:
                            name: adomate-api
                            port:
                                number: 3000
